# mdbook-admonish

./: 404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  examples.html  index.html  overview.html  print.html  qvet.yml  reference.html  searchindex.js  searchindex.json  v2.md
.github/: dependabot.yml
.github/workflows/: check.yml  deploy.yml  docs.yml  publish.yml
book/: .gitignore  book.toml  mdbook-admonish-custom.css  v2.md
book/scripts/: install-mdbook-extras
book/src/: SUMMARY.md  examples.md  overview.md  reference.md
compile_assets/: README.md  package.json
compile_assets/scss/: admonition.scss  lib.scss  material-color.scss  mdbook-admonish-custom-expected.scss
integration/: book.toml  mdbook-admonish-custom.css  mdbook-admonish.css
integration/expected/: book.toml  chapter_1_main.html
integration/scripts/: check  get-snapshot  update-snapshot
integration/src/: chapter_1.md  common_warning.md
licenses/: README.md
precompile/: .gitignore  mdbook-admonish.scss  package.json
scripts/: build-book  check  install  install-mdbook  publish  rebuild-book
src/: REQUIRED_ASSETS_VERSION  admonitions.rs  book_config.rs  color.rs  custom.rs  flavours.rs  lib.rs  markdown.rs  parse.rs  preprocessor.rs  render.rs  resolve.rs  types.rs
src/assets/: mdbook-admonish.css
src/config/: mod.rs  toml_wrangling.rs  v1.rs  v2.rs  v3.rs
src/test_data/: mdbook-admonish-custom-expected.css
