[package]
name = "mdbook-admonish"
version = "1.13.1"
edition = "2021"
rust-version = "1.66.0"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "A preprocessor for mdbook to add Material Design admonishments."
repository = "https://github.com/tommilligan/mdbook-admonish"
documentation = "https://tommilligan.github.io/mdbook-admonish/"

license = "MIT"
keywords = ["mdbook", "markdown", "material", "design", "ui"]
readme = "README.md"

[[bin]]
name = "mdbook-admonish"
path = "src/bin/mdbook-admonish.rs"
required-features = ["cli"]

[profile.release]
strip = true

[lib]
name = "mdbook_admonish"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
# Note: clap 4.4 increases MSRV to 1.70.0 (2023-06-01)
# To use MSRV supported dependencies, install using the lockfile with
# `cargo install mdbook-admonish --locked`
clap = { version = "4.4", default_features = false, features = ["std", "derive"], optional = true }
env_logger = { version = "0.10", default_features = false, optional = true }
log = "0.4.20"
mdbook = "0.4.35"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
regex = "1.9.6"
semver = "1.0.19"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
# The version of toml that mdbook uses internally (and uses in it's public api)
# Only used for compatilibilty with the mdbook public api
toml_mdbook = { package = "toml", version = "0.5.11" }
toml = "0.8.1"
toml_edit = { version = "0.20.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = ["cli", "cli-install"]

# Enable the command line binary
cli = ["clap", "env_logger"]
# Enable installation of files and configuration
cli-install = ["toml_edit"]
