[package]
name = "mdbook-admonish"
version = "1.17.1"
edition = "2021"
rust-version = "1.74.0"

authors = ["Tom Milligan <code@tommilligan.net>"]
description = "A preprocessor for mdbook to add Material Design admonishments."
repository = "https://github.com/tommilligan/mdbook-admonish"
documentation = "https://tommilligan.github.io/mdbook-admonish/"

license = "MIT"
keywords = ["mdbook", "markdown", "material", "design", "ui"]
readme = "README.md"

[[bin]]
name = "mdbook-admonish"
path = "src/bin/mdbook-admonish.rs"
required-features = ["cli"]

[profile.release]
strip = true

[lib]
name = "mdbook_admonish"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
# Note: clap 4.4 increases MSRV to 1.70.0 (2023-06-01)
# To use MSRV supported dependencies, install using the lockfile with
# `cargo install mdbook-admonish --locked`
clap = { version = "4.3", default-features = false, features = ["std", "derive"], optional = true }
env_logger = { version = "0.11", default-features = false, optional = true }
log = "0.4.20"
mdbook = "0.4.35"
once_cell = "1.18.0"
path-slash = "0.2.1"
pulldown-cmark = "0.11"
regex = "1.9.6"
semver = "1.0.19"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.1"
toml_edit = { version = "0.22.13", optional = true }
hex_color = { version = "3.0.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = ["cli", "cli-install"]

# Enable the command line binary
cli = ["clap", "env_logger"]
# Enable installation of files and configuration
cli-install = ["toml_edit"]
